fix(memberListActivities): add word-break to fix cut off text

--- a/src/plugins/memberListActivities/styles.css
+++ b/src/plugins/memberListActivities/styles.css
@@ -50,6 +50,7 @@
     display: flex;
     flex-direction: column;
     color: var(--text-muted);
+    word-break: break-word;
 }
 
 .vc-mla-activity-time-bar {
